--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,12 @@
     "proptypes": "^1.1.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.75.1"
   },
@@ -31,6 +34,7 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.4.0",
     "eslint-plugin-standard": "^3.0.1",
-    "prettier": "^1.7.4"
+    "prettier": "^1.7.4",
+    "redux-devtools-extension": "^2.13.2"
   }
 }
