--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.17.0",
     "proptypes": "^1.1.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -36,5 +37,6 @@
     "eslint-plugin-standard": "^3.0.1",
     "prettier": "^1.7.4",
     "redux-devtools-extension": "^2.13.2"
-  }
+  },
+  "proxy": "http://localhost:9000"
 }
