--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "axios": "^0.17.0",
     "body-parser": "^1.18.2",
+    "comma-number": "^2.0.0",
     "express": "^4.16.2",
+    "lodash": "^4.17.4",
     "moment": "^2.19.1",
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
